--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-web": "~0.11.7",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "victory": "^34.1.1",
+    "victory-native": "^34.1.0",
+    "react-native-svg": "9.13.3"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
