--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.6.0",
     "react-native-svg": "9.13.3",
+    "react-native-swiper": "^1.5.14",
     "react-native-web": "~0.11.7",
     "react-router-native": "^5.1.2",
     "react-spring": "^8.0.27",
